# ClipManager

./: .gitignore  README.md  components.json  eslint.config.js  features.txt  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
clip-manager/: index.html  package.json
clip-manager/src/: App.tsx  Clip.css  Clip.tsx  ClipGrid.css  ClipGrid.tsx  ClipViewer.tsx
clip-manager/src-tauri/: Cargo.toml  tauri.conf.json
clip-manager/src-tauri/src/: main.rs
src/: App.tsx  Clip.tsx  ClipGrid.css  ClipGrid.tsx  ClipViewer.tsx  NavBar.tsx  NavBarButton.tsx  Record.tsx  SearchBar.tsx  SearchPanel.tsx  Settings.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json  permissions.json
src-tauri/src/: main.rs
src/components/ui/: card.tsx  select.tsx  toggle.tsx
